--- a/assets/css/styles-pags.css
+++ b/assets/css/styles-pags.css
@@ -57,18 +57,18 @@ figure img{
     background-color: #632f1b;
 }
 
-.textos-produto{
+.textos-produto, .before_figcaption{
 display: flex;
 flex-direction: column;
-margin: 10px;
+margin: 2px 10px;
 text-align: left;
 }
 
-figcaption{
-    
-    padding: 10px 10px 0 10px;
+.before_figcaption{
+    padding: 0 2px 0;
     color: #4F2819;
     font-weight: bold;
+    font-size: 18px;
 }
 
 .tracinho{
