--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -18,6 +18,7 @@
   }
 
   
+  
   .motion {
     width: 40px;
     height: auto;
@@ -82,6 +83,15 @@
   figcaption h3{
     font-size: 6px
   }
+
+   .texto-sobre {
+    margin-left: 1px;
+    margin-right: 1px;
+  }
+
+  .texto-sobre.expandido {
+    min-height: 2100px;
+ }
 
 
   .footer-container {
